--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>Product Details</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, deserunt?</p>
             <h3>Material</h3>
-            <h4>100% cotton</h4>
+            <h4>100% cottton</h4>
         </div>
         <div class="bottom">
             <h1>New collection</h1>
