--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="bottom">
             <h1>New collection</h1>
-            <h1>Shop book</h1>
+            <h1>Shop book Shop</h1>
         </div>
        <img class="firstimg" src="./christian-agbede-2mNvYet5mws-unsplash.jpg" alt="">
         <img class="secondimg" src="./julio-lopez-aRAukkmD3zw-unsplash.jpg" alt="">
